--- a/MarioServer/MarioServer.vcxproj
+++ b/MarioServer/MarioServer.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="NetworkManager.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="NetworkManager.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
